automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -555,12 +555,11 @@
       "text/plain": [
        "Index(['C/A', 'UNIT', 'SCP', 'STATION', 'LINENAME', 'DIVISION', 'DATE', 'TIME',\n",
        "       'DESC', 'ENTRIES',\n",
-       "       'EXITS                                                               ',\n",
-       "       'On_N_Line'],\n",
+       "       'EXITS                                                               '],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
