--- a/index.ipynb
+++ b/index.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 197625 entries, 0 to 197624\n",
-      "Data columns (total 12 columns):\n",
+      "Data columns (total 11 columns):\n",
       "C/A                                                                     197625 non-null object\n",
       "UNIT                                                                    197625 non-null object\n",
       "SCP                                                                     197625 non-null object\n",
@@ -607,9 +607,8 @@
       "DESC                                                                    197625 non-null object\n",
       "ENTRIES                                                                 197625 non-null int64\n",
       "EXITS                                                                   197625 non-null int64\n",
-      "On_N_Line                                                               197625 non-null bool\n",
-      "dtypes: bool(1), int64(2), object(9)\n",
-      "memory usage: 16.8+ MB\n"
+      "dtypes: int64(2), object(9)\n",
+      "memory usage: 16.6+ MB\n"
      ]
     }
    ],
@@ -626,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
