--- a/index.ipynb
+++ b/index.ipynb
@@ -739,9 +739,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2018-08-25\n",
+       "1   2018-08-25\n",
+       "2   2018-08-25\n",
+       "3   2018-08-25\n",
+       "4   2018-08-25\n",
+       "Name: DATE, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Often you can simply pass the series into this method.\n",
     "pd.to_datetime(df.DATE).head() #It is good practice to preview the results first\n",
@@ -766,18 +782,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'08/25/2018'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.DATE.iloc[0] #Another method for slicing series/dataframes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2018-08-25\n",
+       "1   2018-08-25\n",
+       "2   2018-08-25\n",
+       "3   2018-08-25\n",
+       "4   2018-08-25\n",
+       "Name: DATE, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Notice we include delimiters (in this case /) between the codes.\n",
     "pd.to_datetime(df.DATE, format='%m/%d/%Y').head()"
