--- a/index.ipynb
+++ b/index.ipynb
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "1                                            2283188                     "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "Name: DATE, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,24 +976,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1022,7 +1022,7 @@
        "      <td>59 ST</td>\n",
        "      <td>NQR456W</td>\n",
        "      <td>BMT</td>\n",
-       "      <td>08/25/2018</td>\n",
+       "      <td>2018-08-25</td>\n",
        "      <td>00:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>6736067</td>\n",
@@ -1036,7 +1036,7 @@
        "      <td>59 ST</td>\n",
        "      <td>NQR456W</td>\n",
        "      <td>BMT</td>\n",
-       "      <td>08/25/2018</td>\n",
+       "      <td>2018-08-25</td>\n",
        "      <td>04:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>6736087</td>\n",
@@ -1050,7 +1050,7 @@
        "      <td>59 ST</td>\n",
        "      <td>NQR456W</td>\n",
        "      <td>BMT</td>\n",
-       "      <td>08/25/2018</td>\n",
+       "      <td>2018-08-25</td>\n",
        "      <td>08:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>6736105</td>\n",
@@ -1064,7 +1064,7 @@
        "      <td>59 ST</td>\n",
        "      <td>NQR456W</td>\n",
        "      <td>BMT</td>\n",
-       "      <td>08/25/2018</td>\n",
+       "      <td>2018-08-25</td>\n",
        "      <td>12:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>6736180</td>\n",
@@ -1078,7 +1078,7 @@
        "      <td>59 ST</td>\n",
        "      <td>NQR456W</td>\n",
        "      <td>BMT</td>\n",
-       "      <td>08/25/2018</td>\n",
+       "      <td>2018-08-25</td>\n",
        "      <td>16:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>6736349</td>\n",
@@ -1089,12 +1089,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    C/A  UNIT       SCP STATION LINENAME DIVISION        date      TIME  \\\n",
-       "0  A002  R051  02-00-00   59 ST  NQR456W      BMT  08/25/2018  00:00:00   \n",
-       "1  A002  R051  02-00-00   59 ST  NQR456W      BMT  08/25/2018  04:00:00   \n",
-       "2  A002  R051  02-00-00   59 ST  NQR456W      BMT  08/25/2018  08:00:00   \n",
-       "3  A002  R051  02-00-00   59 ST  NQR456W      BMT  08/25/2018  12:00:00   \n",
-       "4  A002  R051  02-00-00   59 ST  NQR456W      BMT  08/25/2018  16:00:00   \n",
+       "    C/A  UNIT       SCP STATION LINENAME DIVISION       date      TIME  \\\n",
+       "0  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  00:00:00   \n",
+       "1  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  04:00:00   \n",
+       "2  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  08:00:00   \n",
+       "3  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  12:00:00   \n",
+       "4  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  16:00:00   \n",
        "\n",
        "      DESC  ENTRIES  \\\n",
        "0  REGULAR  6736067   \n",
@@ -1111,7 +1111,7 @@
        "4                                            2283384                     "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
